crates/lattice-store-mongodb/tests/ui/document_set_conflicting_loading.rs
use lattice_store_mongodb::MongoDocumentSet;

#[derive(MongoDocumentSet)]
#[mongo(id = u64)]
struct InvalidDocuments {
    #[mongo(many, lazy)]
    value: String,
}

fn main() {}
